--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magma</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -22,7 +23,7 @@
                     <button><i class="ri-menu-fill"></i></button>
                 </div>
             </nav>
-            <video src="./Media/header.mp4"></video>
+            <video src="./Media/header.mp4" autoplay muted loop></video>
             <div class="page1-text">
                 <h1>Redefining Real Estate with DePIN, Digital Twins, & AI</h1>
                 <div class="page1-paragraph">
